tests/snapshots/integration__integration_tests__help__help_config_long.snap
---
source: tests/integration_tests/help.rs
assertion_line: 40
info:
  program: wt
  args:
    - config
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    NO_COLOR: ""
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: /nonexistent/test/approvals.toml
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_SYSTEM_CONFIG_PATH: /etc/xdg/worktrunk/config.toml
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config - Manage user & project configs[0m

Includes shell integration, hooks, and saved state.[0m

Usage: [1m[36mwt config[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36mshell[0m   Shell integration setup
  [1m[36mcreate[0m  Create configuration file
  [1m[36mshow[0m    Show configuration files & locations
  [1m[36mupdate[0m  Update deprecated config settings
  [1m[36mstate[0m   Manage internal data and cache

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m
          Verbose output (-v: hooks, templates; -vv: debug report)

[1m[32mExamples[0m

Install shell integration (required for directory switching):

  [2mwt config shell install[0m

Create user config file with documented examples:

  [2mwt config create[0m

Create project config file ([2m.config/wt.toml[0m) for hooks:

  [2mwt config create --project[0m

Show current configuration and file locations:

  [2mwt config show[0m

[1m[32mConfiguration files[0m

        File                 Location                                Contains                     Committed & shared 
   ────────────── ─────────────────────────────── ─────────────────────────────────────────────── ────────────────── 
   User config    [2m~/.config/worktrunk/config.toml[0m Worktree path template, LLM commit configs, etc ✗                  
   Project config [2m.config/wt.toml[0m                 Project hooks, dev server URL                   ✓                  

Organizations can also deploy a system-wide config file for shared defaults — run [2mwt config show[0m for the platform-specific location.

[1mUser config[0m — personal preferences:

  [2m# ~/.config/worktrunk/config.toml[0m
  [2mworktree-path = ".worktrees/{{ branch | sanitize }}"[0m
  [2m[0m
  [2m[commit.generation][0m
  [2mcommand = "MAX_THINKING_TOKENS=0 claude -p --model=haiku --tools='' --disable-slash-commands --setting-sources='' --system-prompt=''"[0m

[1mProject config[0m — shared team settings:

  [2m# .config/wt.toml[0m
  [2m[post-create][0m
  [2mdeps = "npm ci"[0m
  [2m[0m
  [2m[pre-merge][0m
  [2mtest = "npm test"[0m

[32mUSER CONFIGURATION[0m

Create with [2mwt config create[0m.

Location:

- macOS/Linux: [2m~/.config/worktrunk/config.toml[0m (or [2m$XDG_CONFIG_HOME[0m if set)
- Windows: [2m%APPDATA%\worktrunk\config.toml[0m

[1m[32mWorktree path template[0m

Controls where new worktrees are created.

[1mVariables:[0m

- [2m{{ repo_path }}[0m — absolute path to the repository (e.g., [2m/Users/me/code/myproject[0m)
- [2m{{ repo }}[0m — repository directory name (e.g., [2mmyproject[0m)
- [2m{{ branch }}[0m — raw branch name (e.g., [2mfeature/auth[0m)
- [2m{{ branch | sanitize }}[0m — filesystem-safe: [2m/[0m and [2m\[0m become [2m-[0m (e.g., [2mfeature-auth[0m)
- [2m{{ branch | sanitize_db }}[0m — database-safe: lowercase, underscores, hash suffix (e.g., [2mfeature_auth_x7k[0m)

[1mExamples[0m for repo at [2m~/code/myproject[0m, branch [2mfeature/auth[0m:

  [2m# Default — sibling directory[0m
  [2m# Creates: ~/code/myproject.feature-auth[0m
  [2m# worktree-path = "{{ repo_path }}/../{{ repo }}.{{ branch | sanitize }}"[0m
  [2m[0m
  [2m# Inside the repository[0m
  [2m# Creates: ~/code/myproject/.worktrees/feature-auth[0m
  [2mworktree-path = "{{ repo_path }}/.worktrees/{{ branch | sanitize }}"[0m
  [2m[0m
  [2m# Centralized worktrees directory[0m
  [2m# Creates: ~/worktrees/myproject/feature-auth[0m
  [2mworktree-path = "~/worktrees/{{ repo }}/{{ branch | sanitize }}"[0m

[2m~[0m expands to the home directory. Relative paths are relative to the repository root.

[1m[32mLLM commit messages[0m

Generate commit messages automatically during merge. Requires an external CLI tool.

See LLM commits docs for setup and Custom prompt templates for template customization.

[1m[32mCommand config[0m

[32mList[0m

Persistent flag values for [2mwt list[0m. Override on command line as needed.

  [2m[list][0m
  [2msummary = false    # Enable LLM branch summaries (requires [commit.generation])[0m
  [2m[0m
  [2mfull = false       # Show CI, main…± diffstat, and LLM summaries (--full)[0m
  [2mbranches = false   # Include branches without worktrees (--branches)[0m
  [2mremotes = false    # Include remote-only branches (--remotes)[0m

[32mCommit[0m

Shared by [2mwt step commit[0m, [2mwt step squash[0m, and [2mwt merge[0m.

  [2m[commit][0m
  [2mstage = "all"      # What to stage before commit: "all", "tracked", or "none"[0m

[32mMerge[0m

All flags are on by default. Set to false to change default behavior.

  [2m[merge][0m
  [2msquash = true      # Squash commits into one (--no-squash to preserve history)[0m
  [2mcommit = true      # Commit uncommitted changes first (--no-commit to skip)[0m
  [2mrebase = true      # Rebase onto target before merge (--no-rebase to skip)[0m
  [2mremove = true      # Remove worktree after merge (--no-remove to keep)[0m
  [2mverify = true      # Run project hooks (--no-verify to skip)[0m

[32mSwitch picker[0m

Configuration for [2mwt switch[0m interactive picker.

  [2m[switch.picker][0m
  [2m# Pager command for diff preview (overrides git's core.pager)[0m
  [2m# pager = "delta --paging=never"[0m
  [2m[0m
  [2m# Timeout (ms) for git commands during picker loading (default: 200)[0m
  [2m# Lower values show the TUI faster; 0 disables timeouts[0m
  [2m# timeout-ms = 200[0m

[32mUser project-specific settings[0m

For context:

- Project config settings are shared with teammates.
- User configs generally apply to all projects.
- User configs _also_ has a [2m[projects][0m table which holds project-specific settings for the user, such as worktree layout and setting overrides. That's what this section covers.

Entries are keyed by project identifier (e.g., [2mgithub.com/user/repo[0m).

[1mSetting overrides (Experimental)[0m

Override global user config for a specific project. Scalar values (like [2mworktree-path[0m) replace the global value. Hooks append — both global and per-project hooks run.

  [2m[projects."github.com/user/repo"][0m
  [2mworktree-path = ".worktrees/{{ branch | sanitize }}"[0m
  [2mlist.full = true[0m
  [2mmerge.squash = false[0m
  [2mpost-create.env = "cp .env.example .env"[0m

[32mCustom prompt templates[0m

Templates use minijinja syntax.

[1mCommit template[0m

Available variables:

- [2m{{ git_diff }}[0m, [2m{{ git_diff_stat }}[0m — diff content
- [2m{{ branch }}[0m, [2m{{ repo }}[0m — context
- [2m{{ recent_commits }}[0m — recent commit messages

Default template:

  [2m[commit.generation][0m
  [2mtemplate = """[0m
  [2mWrite a commit message for the staged changes below.[0m
  [2m[0m
  [2m<format>[0m
  [2m- Subject line under 50 chars[0m
  [2m- For material changes, add a blank line then a body paragraph explaining the change[0m
  [2m- Output only the commit message, no quotes or code blocks[0m
  [2m</format>[0m
  [2m[0m
  [2m<style>[0m
  [2m- Imperative mood: "Add feature" not "Added feature"[0m
  [2m- Match recent commit style (conventional commits if used)[0m
  [2m- Describe the change, not the intent or benefit[0m
  [2m</style>[0m
  [2m[0m
  [2m<diffstat>[0m
  [2m{{ git_diff_stat }}[0m
  [2m</diffstat>[0m
  [2m[0m
  [2m<diff>[0m
  [2m{{ git_diff }}[0m
  [2m</diff>[0m
  [2m[0m
  [2m<context>[0m
  [2mBranch: {{ branch }}[0m
  [2m{% if recent_commits %}<recent_commits>[0m
  [2m{% for commit in recent_commits %}- {{ commit }}[0m
  [2m{% endfor %}</recent_commits>{% endif %}[0m
  [2m</context>[0m
  [2m[0m
  [2m"""[0m

[1mSquash template[0m

Available variables (in addition to commit template variables):

- [2m{{ commits }}[0m — list of commits being squashed
- [2m{{ target_branch }}[0m — merge target branch

Default template:

  [2m[commit.generation][0m
  [2msquash-template = """[0m
  [2mCombine these commits into a single commit message.[0m
  [2m[0m
  [2m<format>[0m
  [2m- Subject line under 50 chars[0m
  [2m- For material changes, add a blank line then a body paragraph explaining the change[0m
  [2m- Output only the commit message, no quotes or code blocks[0m
  [2m</format>[0m
  [2m[0m
  [2m<style>[0m
  [2m- Imperative mood: "Add feature" not "Added feature"[0m
  [2m- Match the style of commits being squashed (conventional commits if used)[0m
  [2m- Describe the change, not the intent or benefit[0m
  [2m</style>[0m
  [2m[0m
  [2m<commits branch="{{ branch }}" target="{{ target_branch }}">[0m
  [2m{% for commit in commits %}- {{ commit }}[0m
  [2m{% endfor %}</commits>[0m
  [2m[0m
  [2m<diffstat>[0m
  [2m{{ git_diff_stat }}[0m
  [2m</diffstat>[0m
  [2m[0m
  [2m<diff>[0m
  [2m{{ git_diff }}[0m
  [2m</diff>[0m
  [2m[0m
  [2m"""[0m

[32mPROJECT CONFIGURATION[0m

Project config ([2m.config/wt.toml[0m) defines lifecycle hooks and project-specific settings. This file is checked into version control and shared with the team. Create with [2mwt config create --project[0m.

See [2mwt hook[0m for hook types, execution order, template variables, and examples.

[32mNon-hook settings[0m

  [2m# .config/wt.toml[0m
  [2m[0m
  [2m# URL column in wt list (dimmed when port not listening)[0m
  [2m[list][0m
  [2murl = "http://localhost:{{ branch | hash_port }}"[0m
  [2m[0m
  [2m# Override CI platform detection for self-hosted instances[0m
  [2m[ci][0m
  [2mplatform = "github"  # or "gitlab" or "azuredevops"[0m

[32mSHELL INTEGRATION[0m

Worktrunk needs shell integration to change directories when switching worktrees. Install with:

  [2mwt config shell install[0m

For manual setup, see [2mwt config shell init --help[0m.

Without shell integration, [2mwt switch[0m prints the target directory but cannot [2mcd[0m into it.

[32mFirst-run prompts[0m

On first run without shell integration, Worktrunk offers to install it. Similarly, on first commit without LLM configuration, it offers to configure a detected tool ([2mclaude[0m, [2mcodex[0m). Declining sets [2mskip-shell-integration-prompt[0m or [2mskip-commit-generation-prompt[0m automatically.

[32mOTHER[0m

[1m[32mEnvironment variables[0m

All user config options can be overridden with environment variables using the [2mWORKTRUNK_[0m prefix.

[32mNaming convention[0m

Config keys use kebab-case ([2mworktree-path[0m), while env vars use SCREAMING_SNAKE_CASE ([2mWORKTRUNK_WORKTREE_PATH[0m). The conversion happens automatically.

For nested config sections, use double underscores to separate levels:

            Config                   Environment Variable          
   ───────────────────────── ───────────────────────────────────── 
   [2mworktree-path[0m             [2mWORKTRUNK_WORKTREE_PATH[0m               
   [2mcommit.generation.command[0m [2mWORKTRUNK_COMMIT__GENERATION__COMMAND[0m 
   [2mcommit.stage[0m              [2mWORKTRUNK_COMMIT__STAGE[0m               

Note the single underscore after [2mWORKTRUNK[0m and double underscores between nested keys.

[32mExample: CI/testing override[0m

Override the LLM command in CI to use a mock:

  [2mWORKTRUNK_COMMIT__GENERATION__COMMAND="echo 'test: automated commit'" wt merge[0m

[32mOther environment variables[0m

               Variable                                                   Purpose                                      
   ───────────────────────────────── ───────────────────────────────────────────────────────────────────────────────── 
   [2mWORKTRUNK_BIN[0m                     Override binary path for shell wrappers (useful for testing dev builds)           
   [2mWORKTRUNK_CONFIG_PATH[0m             Override user config file location                                                
   [2mWORKTRUNK_SYSTEM_CONFIG_PATH[0m      Override system config file location                                              
   [2mXDG_CONFIG_DIRS[0m                   Colon-separated system config directories (default: [2m/etc/xdg[0m)                     
   [2mWORKTRUNK_DIRECTIVE_FILE[0m          Internal: set by shell wrappers to enable directory changes                       
   [2mWORKTRUNK_SHELL[0m                   Internal: set by shell wrappers to indicate shell type (e.g., [2mpowershell[0m)         
   [2mWORKTRUNK_MAX_CONCURRENT_COMMANDS[0m Max parallel git commands (default: 32). Lower if hitting file descriptor limits. 
   [2mNO_COLOR[0m                          Disable colored output (standard)                                                 
   [2mCLICOLOR_FORCE[0m                    Force colored output even when not a TTY
