tests/snapshots/integration__integration_tests__help__help_config_plugins_omp.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - plugins
    - omp
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_ALLOW_PROTOCOL: file
    GIT_CONFIG_COUNT: "2"
    GIT_CONFIG_GLOBAL: /nonexistent/wt/gitconfig
    GIT_CONFIG_KEY_0: user.useConfigOnly
    GIT_CONFIG_KEY_1: rerere.enabled
    GIT_CONFIG_SYSTEM: /nonexistent/wt/gitconfig
    GIT_CONFIG_VALUE_0: "true"
    GIT_CONFIG_VALUE_1: "false"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_PARENT_SHELL: ""
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_PROBE_TIMEOUT_MS: "60000"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
---
success: true
exit_code: 0
----- stdout -----
wt config plugins omp - oh-my-pi activity hook

Usage: [1m[36mwt config plugins omp[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36minstall[0m    Install the activity tracking hook
  [1m[36muninstall[0m  Remove the activity tracking hook

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

      [1m[36m--config-set[0m[36m [0m[36m<toml>[0m
          Override config with inline TOML, e.g. --config-set list.full=true (repeatable)

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m
          Verbose output (-v: info logs + hook/alias template variables on stderr; -vv: also debug logs and raw subprocess output written to .git/wt/logs/). Set WORKTRUNK_VERBOSE=0|1|2 to apply the same level everywhere — including shell completion, which no flag can reach

  [1m[36m-y[0m, [1m[36m--yes[0m
          Skip approval prompts

Activity tracking hook — shows status markers in [2mwt list[0m:
- 🤖 — agent is working
- 💬 — agent is waiting for input

oh-my-pi's [2msession_shutdown[0m event clears the marker when the session exits.

[1m[32mExamples[0m

[107m [0m [2m[0m[2m[34mwt[0m[2m config plugins omp install[0m
[107m [0m [2m[0m[2m[34mwt[0m[2m config plugins omp uninstall[0m

[1m[32mHook location[0m

Written to [2m~/.omp/agent/hooks/pre/worktrunk.ts[0m. Honors [2m$PI_CONFIG_DIR[0m,
the active [2m$OMP_PROFILE[0m / [2m$PI_PROFILE[0m profile, and [2m$PI_CODING_AGENT_DIR[0m
for the default profile.

----- stderr -----
